--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,176 @@
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.lien{
+  color : black;
   display: flex;
+  margin : 13px 20px 0 20px;
+  font-family: 'Baloo Tammudu 2', cursive;
+}
+
+.styles_typicalWrapper__1_Uvh{
+  font-weight: 400;
+  font-size : 300%;
+}
+
+#sousTitre{
+  font-size : 160%;
+}
+
+#competences{
+  width: 100%;
+  display: flex;
+  flex-wrap : wrap;
+  justify-content: space-around;
+}
+
+.compDiv{
+  width : 30%;
+}
+
+#projetGroupe{
+  padding-top: 15%;
+  display : flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items : center;
+  margin-bottom : 5%;
 }
 
-.App-link {
-  color: #61dafb;
+.projet{
+  width: 100%;
+  display : flex;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#footerIcon{
+  display : flex;
+  justify-content : space-around;
+  width : 25%;
+  margin-top : -12px;
+}
+
+.myButton {
+  width: 180px;
+  padding : 12px 6px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  text-align : center;
+  vertical-align: middle;
+  text-decoration: none;
   }
-  to {
-    transform: rotate(360deg);
+
+.myButton:hover {
+  background-color: rgb(255, 108, 92);
+  box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75);
+  color: #fff;
+  transform: translateY(-7px);
+  text-decoration: none;
+}
+
+#bio{
+  display : flex;
+  justify-content : space-around;
+  width : 100%;
+}
+
+#carteBio{
+  display : flex
+}
+
+#timeLine{
+  width : 600px;
+}
+
+#txtBio{
+  margin : 20px;
+  width : 300px;
+}
+
+.nav-item{
+  z-index: 10;
+}
+
+@media screen and (max-width: 992px) {
+  .styles_typicalWrapper__1_Uvh{
+    font-size : 180%;
   }
+
+  #sousTitre{
+    font-size : 100%;
+  }
+
+  .projet{
+    flex-direction: column;
+    width: 80%;
+  }
+
+  #footerIcon{
+    width : 60%;
+  }
+
+  #projetGroupe div{
+    margin-top: 30px;
+  }
+
+  .projet div{
+    margin: auto;
+  }
+
+  .justify-content-end nav nav-pills{
+    display: flex;
+    justify-content: center !important;
+  }
+
+  #bio{
+    flex-direction: column;
+  }
+
+  #bio{
+    display: block;
+  }
+
+  #timeLine, #imgBio{
+    display : none;
+  }
+
+  #txtBio{
+    width : auto;
+  }
+
+  .nav-item{
+    font-size: 60%;
+  }
+
+  #competences{
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .compDiv{
+    width : 80%;
+    margin : auto;
+  }
+
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link{
-  background : none;
-  border-radius: 30px;
-  color : rgb(3, 219, 252);
-  border : 1.5px solid rgb(3, 219, 252);
-}
-
-.nav-pills .nav-link{
-  color :  black;
-}
-
-.MuiIconButton-root:hover {
-  background-color: rgba(3, 219, 252, 0.5) !important;
-  color: rgb(255, 108, 92);
+@media screen and (max-width: 450px) {
+  .styles_typicalWrapper__1_Uvh{
+    font-size : 130%;
+  }
+  #sousTitre{
+    font-size : 80%;
+  }
 }
