--- a/src/assemblage/Footer.css
+++ b/src/assemblage/Footer.css
@@ -1,12 +1,27 @@
-#footerIcon{
+#footerIconDiv{
     display : flex;
     justify-content : space-around;
     width : 25%;
     margin-top : -12px;
   }
 
+  #contact{
+    background-color : rgba(3, 219, 252, 0.2);
+    display : flex;
+    flex-direction : column;
+    align-items : center;
+    height : 40px;
+    margin-top : 50px;
+  }
+
+  .iconLien{
+    display : flex;
+    color : black;
+    text-decoration : none;
+  }
+
   @media screen and (max-width: 992px) {
-    #footerIcon{
+    #footerIconDiv{
         width : 60%;
       }
   }
