--- a/src/assemblage/Header.css
+++ b/src/assemblage/Header.css
@@ -10,9 +10,13 @@
     margin-bottom : 50px;
   }
 
+  #plus:hover{
+    color:  rgb(255, 108, 92);
+  }
+
 @media screen and (max-width: 992px) {
     .styles_typicalWrapper__1_Uvh{
-        font-size : 180%;
+        font-size : 170%;
       }
     
       #sousTitre{
@@ -22,6 +26,6 @@
 
 @media screen and (max-width: 560px) {
     .styles_typicalWrapper__1_Uvh{
-      font-size : 140%;
+      font-size : 130%;
     }
 }
