--- a/src/component/Carousel.css
+++ b/src/component/Carousel.css
@@ -1,4 +1,32 @@
-.carousel-control-next,
-.carousel-control-prev {
-    filter: invert(100%);
+.Slide-text-28{
+    display : none;
 }
+
+.MuiButton-contained{
+        width: 180px !important;
+        padding : 12px 6px !important;
+        font-family: 'Roboto', sans-serif !important;
+        font-size: 11px !important;
+        text-transform: uppercase !important;
+        letter-spacing: 2.5px !important;
+        font-weight: 500 !important;
+        color: #000 !important;
+        background-color: #fff !important;
+        border: none !important;
+        border-radius: 45px !important;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1) !important;
+        transition: all 0.3s ease 0s !important;
+        cursor: pointer !important;
+        outline: none !important;
+        text-align : center !important;
+        vertical-align: middle !important;
+        text-decoration: none !important;
+}
+
+.MuiButton-contained:hover {
+    background-color: rgb(255, 108, 92) !important;
+    box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75) !important;
+    color: #fff !important;
+    transform: translateY(-7px) !important;
+    text-decoration: none !important;
+  }
