--- a/src/component/NavBar.css
+++ b/src/component/NavBar.css
@@ -1,8 +1,11 @@
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link{
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link, #navJob{
     background : none;
     border-radius: 30px;
     color : rgb(3, 219, 252);
     border : 1.5px solid rgb(3, 219, 252);
+    text-decoration: none;
+    font-size: 1em;
+    padding: 0.5em 1rem;
   }
 
 .nav-pills .nav-link{
