--- a/src/assemblage/Header.css
+++ b/src/assemblage/Header.css
@@ -14,6 +14,14 @@
     color:  rgb(255, 108, 92);
   }
 
+  #blocTexte{
+    margin-top : 1%;
+    display : flex;
+    flex-direction: column;
+    align-items : center; 
+    font-family: 'Source Code Pro', monospace;
+  }
+
 @media screen and (max-width: 992px) {
     .styles_typicalWrapper__1_Uvh{
         font-size : 170%;
