--- a/src/component/Profil.css
+++ b/src/component/Profil.css
@@ -27,13 +27,19 @@
     border-radius : 50%;
     transition: opacity 1s ease-in-out;
     animation: pulseRed 1.5s infinite;
+    position : relative;
+    top : 220px;
+    background-color: "rgba(0, 0, 0, 0)";
+    color : rgb(3, 219, 252);
+    height: 50px;
+    padding: 5%;
   }
 
   #profilLien{
     display : flex; 
     justify-content : center; 
     height: 250px;
-    margin-top : 2%;
+    margin-top : 1%;
   }
   
   @keyframes pulseBlue {
@@ -53,15 +59,18 @@
   
   @keyframes pulseRed {
     0% {
-      -moz-box-shadow: 0 0 0 0 rgba(255, 108, 92, 0.4);
       box-shadow: 0 0 0 0 rgba(255, 108, 92, 0.4);
     }
     70% {
-        -moz-box-shadow: 0 0 0 20px rgba(255, 108, 92, 0);
         box-shadow: 0 0 0 20px rgba(255, 108, 92, 0);
     }
     100% {
-        -moz-box-shadow: 0 0 0 0 rgba(255, 108, 92, 0);
         box-shadow: 0 0 0 0 rgba(255, 108, 92, 0);
+    }
+  }
+
+  @media screen and (max-width: 1200px) {
+    #profilLien{
+        margin-top: 0;
     }
   }
