--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+@font-face{
+  font-family: "Roboto";
+  src: url('./Roboto-Regular.ttf');
+}
+
+@font-face{
+  font-family: "RobotoMedium";
+  src: url('./Roboto-Medium.ttf');
+}
+
+@font-face{
+  font-family: "'Source Code Pro'";
+  src: url('./SourceCodePro-Regular.ttf');
+}
+
 html{
   scroll-behavior: smooth;
   overflow-x:hidden;
