--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -1,28 +1,34 @@
 .myButton {
-    width: 180px;
-    padding : 12px 6px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 11px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    text-align : center;
-    vertical-align: middle;
-    text-decoration: none;
-    }
-  
-  .myButton:hover {
-    background-color: rgb(255, 108, 92);
-    box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75);
-    color: #fff;
-    transform: translateY(-7px);
-    text-decoration: none;
+  width: 190px;
+  padding : 12px 6px;
+  font-family: 'RobotoMedium', sans-serif;
+  font-size: 11.5px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  text-align : center;
+  vertical-align: middle;
+  text-decoration: none;
   }
+
+.myButton:hover {
+  background-color: rgb(255, 108, 92);
+  -webkit-box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75);
+          box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75);
+  color: #fff;
+  -webkit-transform: translateY(-7px);
+      -ms-transform: translateY(-7px);
+          transform: translateY(-7px);
+  text-decoration: none;
+}
