--- a/src/component/CarouselPopUp.css
+++ b/src/component/CarouselPopUp.css
@@ -14,7 +14,10 @@
         background-color: #fff !important;
         border: none !important;
         border-radius: 45px !important;
-        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1) !important;
+        -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1) !important;
+                box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1) !important;
+        -webkit-transition: all 0.3s ease 0s !important;
+        -o-transition: all 0.3s ease 0s !important;
         transition: all 0.3s ease 0s !important;
         cursor: pointer !important;
         outline: none !important;
@@ -25,8 +28,11 @@
 
 .MuiButton-contained:hover {
     background-color: rgb(255, 108, 92) !important;
-    box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75) !important;
+    -webkit-box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75) !important;
+            box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75) !important;
     color: #fff !important;
-    transform: translateY(-7px) !important;
+    -webkit-transform: translateY(-7px) !important;
+        -ms-transform: translateY(-7px) !important;
+            transform: translateY(-7px) !important;
     text-decoration: none !important;
   }
