--- a/src/component/CompetencesDev.css
+++ b/src/component/CompetencesDev.css
@@ -1,22 +1,29 @@
 #competences{
-    width: 100%;
-    display: flex;
-    flex-wrap : wrap;
-    justify-content: space-around;
-  }
-  
-  .compDiv{
-    width : 30%;
-  }
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap : wrap;
+      flex-wrap : wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
 
-  @media screen and (max-width: 992px) {
-    #competences{
-        flex-direction: column;
-        width: 100%;
-      }
-    
-      .compDiv{
-        width : 80%;
-        margin : auto;
-      }
-  }
+.compDiv{
+  width : 30%;
+}
+
+@media screen and (max-width: 992px) {
+  #competences{
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      width: 100%;
+    }
+  
+    .compDiv{
+      width : 80%;
+      margin : auto;
+    }
+}
