--- a/src/component/Projets.css
+++ b/src/component/Projets.css
@@ -1,28 +1,41 @@
 #projetGroupe{
-    padding-top: 15%;
-    display : flex;
-    flex-direction: column;
-    align-items : center;
-    margin-bottom : 5%;
-  }
-  
-  .projet{
-    width: 100%;
-    display : flex;
-    justify-content: space-around;
-  }
+  padding-top: 15%;
+  display : -webkit-box;
+  display : -ms-flexbox;
+  display : flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align : center;
+      -ms-flex-align : center;
+          align-items : center;
+  margin-bottom : 5%;
+}
+
+.projet{
+  width: 100%;
+  display : -webkit-box;
+  display : -ms-flexbox;
+  display : flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
 
 @media screen and (max-width: 992px) {
-    .projet{
-        flex-direction: column;
-        width: 80%;
-      }
-      
-    #projetGroupe div{
-        margin-top: 30px;
+  .projet{
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      width: 80%;
     }
+    
+  #projetGroupe div{
+      margin-top: 30px;
+  }
 
-    .projet div{
-        margin: auto;
-    }
+  .projet div{
+      margin: auto;
+  }
 }
