--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -1,27 +1,20 @@
-#footerIconDiv{
-  display : -webkit-box;
-  display : -ms-flexbox;
-  display : flex;
-  -ms-flex-pack : distribute;
-      justify-content : space-around;
-  width : 25%;
-  margin-top : -12px;
-}
-
 #contact{
   background-color : rgba(3, 219, 252, 0.2);
   display : -webkit-box;
   display : -ms-flexbox;
   display : flex;
-  -webkit-box-orient : vertical;
-  -webkit-box-direction : normal;
-      -ms-flex-direction : column;
-          flex-direction : column;
-  -webkit-box-align : center;
-      -ms-flex-align : center;
-          align-items : center;
   height : 40px;
   margin-top : 50px;
+
+  -ms-flex-pack : distribute;
+      justify-content : space-around;
+  width : 100%;
+  padding: 0 20%;
+}
+
+.iconDiv{
+  position: relative;
+  bottom: 14px;
 }
 
 .iconLien{
@@ -33,7 +26,7 @@
 }
 
 @media screen and (max-width: 992px) {
-  #footerIconDiv{
-      width : 60%;
+  #contact{
+        padding: 0 10%;
     }
 }
