--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -1,28 +1,38 @@
 .myButton {
-  width: 190px;
-  padding : 12px 6px;
+  position: absolute;
   font-family: 'RobotoMedium', sans-serif;
   font-size: 11.5px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
-  color: #000;
-  background-color: #fff;
+  background: linear-gradient(90deg, white 20%, black 20%);
+  background-clip: text;
+  color: transparent;
   border: none;
-  border-radius: 45px;
-  -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
   text-align : center;
   vertical-align: middle;
   text-decoration: none;
+  line-height : 33px;
   }
 
-.myButton:hover {
+  .divButton{
+        background: linear-gradient(90deg, rgba(64,64,64,1) 20%, rgba(255,255,255,0) 20%);
+        -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  }
+
+  .divButton, .myButton{
+        width: 200px;
+        border-radius: 45px;
+        height: 35px;
+        -webkit-transition: all 0.3s ease 0s;
+        -o-transition: all 0.3s ease 0s;
+        transition: all 0.3s ease 0s;
+  }
+
+  .divButton:hover {
   background-color: rgb(255, 108, 92);
   -webkit-box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75);
           box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75);
@@ -30,5 +40,11 @@
   -webkit-transform: translateY(-7px);
       -ms-transform: translateY(-7px);
           transform: translateY(-7px);
-  text-decoration: none;
+}
+
+.myButton:hover{
+        text-decoration: none;
+        background: linear-gradient(90deg, white 20%, black 20%);
+        background-clip: text;
+        color: transparent;
 }
