--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -9,8 +9,16 @@
   margin-bottom : 50px;
 }
 
-#plus:hover{
-  color:  rgb(255, 108, 92);
+#plus:hover, #goTop, #plus{
+  color:  gray;
+}
+
+#volume{
+  position: absolute;
+  top : 12px;
+  left: 12px;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.02);
 }
 
 #blocTexte{
@@ -20,11 +28,11 @@
   display : flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align : center;
-      -ms-flex-align : center;
-          align-items : center; 
+  -ms-flex-align : center;
+  align-items : center; 
   font-family: 'Source Code Pro', monospace;
 }
 
@@ -46,6 +54,13 @@
 
   #goTop{
     right : 18px;
+  }
+
+  #volume{
+    position: absolute;
+    top : 12px;
+    right: 20px;
+    left : auto;
   }
 }
 
