--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -6,23 +6,15 @@
 #sousTitre{
   font-size : 160%;
   text-align : center;
-  margin-bottom : 50px;
+  margin-bottom : 2em;
 }
 
 #plus:hover, #goTop, #plus{
   color:  gray;
 }
 
-#volume{
-  position: absolute;
-  top : 12px;
-  left: 12px;
-  z-index: 100;
-  background-color: rgba(0, 0, 0, 0.02);
-}
-
 #blocTexte{
-  margin-top : 1%;
+  margin-top : 1em;
   display : -webkit-box;
   display : -ms-flexbox;
   display : flex;
@@ -56,12 +48,6 @@
     right : 18px;
   }
 
-  #volume{
-    position: absolute;
-    top : 12px;
-    right: 20px;
-    left : auto;
-  }
 }
 
 @media screen and (max-width: 560px) {
