--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -14,7 +14,7 @@
   text-align : center;
   vertical-align: middle;
   text-decoration: none;
-  line-height : 33px;
+  line-height : 36px;
   }
 
   .divButton{
@@ -26,7 +26,7 @@
   .divButton, .myButton{
         width: 200px;
         border-radius: 45px;
-        height: 35px;
+        height: 38px;
         -webkit-transition: all 0.3s ease 0s;
         -o-transition: all 0.3s ease 0s;
         transition: all 0.3s ease 0s;
@@ -44,7 +44,7 @@
 
 .myButton:hover{
         text-decoration: none;
-        background: linear-gradient(90deg, white 20%, black 20%);
+        background: white;
         background-clip: text;
         color: transparent;
 }
