--- a/src/component/CompetencesDev.css
+++ b/src/component/CompetencesDev.css
@@ -1,4 +1,4 @@
-#competences{
+#competencesDev{
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9,12 +9,12 @@
       justify-content: space-around;
 }
 
-.compDiv{
+.compDivDev{
   width : 30%;
 }
 
 @media screen and (max-width: 992px) {
-  #competences{
+  #competencesDev{
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
@@ -22,7 +22,7 @@
       width: 100%;
     }
   
-    .compDiv{
+    .compDivDev{
       width : 80%;
       margin : auto;
     }
