--- a/src/component/CarouselPopUp.css
+++ b/src/component/CarouselPopUp.css
@@ -11,7 +11,7 @@
         letter-spacing: 2.5px !important;
         font-weight: 500 !important;
         color: #000 !important;
-        background: linear-gradient(90deg, rgba(64,64,64,0.9) 20%, rgba(255, 255, 255, 0.9) 20%) !important;
+        background: linear-gradient(90deg, rgba(64,64,64,0.9) 22%, rgba(255, 255, 255, 0.9) 22%) !important;
         border: none !important;
         border-radius: 45px !important;
         -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1) !important;
@@ -27,7 +27,7 @@
 }
 
 .MuiButton-contained:hover , .boutton:hover{
-    background: linear-gradient(90deg, rgba(64,64,64,0.9) 20%, rgb(255, 108, 92) 20%) !important;
+    background: linear-gradient(90deg, rgba(64,64,64, 1) 22%, rgb(255, 108, 92) 22%) !important;
     -webkit-box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75) !important;
             box-shadow: 0px 15px 20px rgba(255, 108, 92, 0.75) !important;
     color: #fff !important;
