--- a/src/component/Profil.css
+++ b/src/component/Profil.css
@@ -81,8 +81,8 @@
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 992px) {
   #profilLien{
-      margin-top: 0;
-  }
+    margin-top: 3em;
+}
 }
