--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,12 @@
 
 @font-face{
   font-family: "'Source Code Pro'";
-  src: url('./polices/SourceCodePro-Regular.ttf');
+  src: url('./polices/SourceCodePro-ExtraLight.ttf');
+}
+
+@font-face{
+  font-family: "'Segoe UI'";
+  src: url('./polices/Segoe UI.ttf');
 }
 
 html{
@@ -21,4 +26,6 @@ html{
 body{
   padding: 0 !important;
   color : rgb(64,64,64) !important;
+  margin: 0;
+  font-family: "Segoe UI";
 }
